// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation Container should correctly render amp navigation 1`] = `
.c3 {
  color: #fff;
  fill: currentColor;
}

.c9 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c4 {
  background-color: #222222;
  clear: both;
}

.c5 {
  list-style-type: none;
  margin: 0;
  padding: 0 0.5rem;
  border-bottom: 0.125rem solid #3F3F42;
}

.c6 {
  padding: 0.75rem 0;
  border-bottom: 0.0625rem solid #3F3F42;
}

.c6:last-child {
  padding-bottom: 1rem;
  border: 0;
}

.c7 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c7:hover,
.c7:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  border-left: 0.25rem solid #FFFFFF;
  padding-left: 0.5rem;
}

.c2 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.c2:hover,
.c2:focus {
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.c2:hover::after,
.c2:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c2 svg {
  vertical-align: middle;
}

.c1 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.c12 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.c15 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c15:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.c15:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c17 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c17:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c17:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c14 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

.c16::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.c0 .c13::after {
  left: 0;
}

@media (min-width:37.5rem) {
  .c4 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .c2 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    overflow: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c15 {
    padding: 0.75rem 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c17 {
    padding: 0.75rem 0.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c14:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c14::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

@media (max-width:37.4375rem) {
  .c0.open {
    background-color: #222222;
  }
}

@media (max-width:37.4375rem) {
  .c10 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .c10::-webkit-scrollbar {
    display: none;
  }

  .c10:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }
}

@media (max-width:37.4375rem) {
  .c11.scrollable-hidden {
    display: none;
    visibility: hidden;
  }
}

<html>
  <head>
    <script
      async="true"
      custom-element="amp-bind"
      src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    />
  </head>
  <body>
    <div>
      <nav
        class="c0"
        dir="ltr"
        id="navigation-id"
        role="navigation"
      >
        <div
          class="c1"
        >
          <amp-state
            id="menuState"
          >
            <script
              type="application/json"
            >
              {"expanded":false}
            </script>
          </amp-state>
          <button
            aria-expanded="false"
            aria-label="Sections"
            class="c2"
            data-amp-bind-aria-expanded="menuState.expanded ? \\"true\\" : \\"false\\""
            dir="ltr"
            on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        dropdown-menu.toggleVisibility,
        scrollable-nav.toggleClass(class=scrollable-hidden),
        navigation-id.toggleClass(class=open)
      "
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c3"
              data-amp-bind-hidden="menuState.expanded"
              focusable="false"
              height="2.75rem"
              viewBox="0 0 44 44"
              width="2.75rem"
            >
              <path
                d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
              />
            </svg>
            <svg
              aria-hidden="true"
              class="c3"
              data-amp-bind-hidden="!menuState.expanded"
              focusable="false"
              height="2.75rem"
              hidden=""
              viewBox="0 0 44 44"
              width="2.75rem"
            >
              <path
                d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
          <div
            class="c4"
            hidden=""
            id="dropdown-menu"
          >
            <ul
              class="c5"
              role="list"
            >
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news"
                >
                  <span
                    class="c8"
                    dir="ltr"
                    role="text"
                  >
                    <span
                      class="c9"
                    >
                      Current page
                      , 
                    </span>
                    Home
                  </span>
                </a>
              </li>
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news/uk"
                >
                  UK
                </a>
              </li>
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news/world"
                >
                  World
                </a>
              </li>
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news/business"
                >
                  Business
                </a>
              </li>
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news/politics"
                >
                  Politics
                </a>
              </li>
              <li
                class="c6"
                role="listitem"
              >
                <a
                  class="c7"
                  href="/news/technology"
                >
                  Tech
                </a>
              </li>
            </ul>
          </div>
          <div
            class="c10 c11"
            dir="ltr"
            id="scrollable-nav"
          >
            <ul
              class="c12"
              role="list"
            >
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c15"
                  href="/news"
                >
                  <span
                    class="c16"
                    role="text"
                  >
                    <span
                      class="c9"
                    >
                      Current page
                      , 
                    </span>
                    Home
                  </span>
                </a>
              </li>
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c17"
                  href="/news/uk"
                >
                  UK
                </a>
              </li>
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c17"
                  href="/news/world"
                >
                  World
                </a>
              </li>
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c17"
                  href="/news/business"
                >
                  Business
                </a>
              </li>
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c17"
                  href="/news/politics"
                >
                  Politics
                </a>
              </li>
              <li
                class="c13 c14"
                dir="ltr"
                role="listitem"
              >
                <a
                  class="c17"
                  href="/news/technology"
                >
                  Tech
                </a>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </div>
  </body>
</html>
`;

exports[`Navigation Container should correctly render canonical navigation 1`] = `
.c3 {
  color: #fff;
  fill: currentColor;
}

.c10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  position: relative;
  padding: 0;
  margin: 0;
  background-color: transparent;
  border: 0;
  float: left;
  height: 2.75rem;
  width: 2.75rem;
}

.c2:hover,
.c2:focus {
  box-shadow: inset 0 0 0 0.25rem #FFFFFF;
}

.c2:hover::after,
.c2:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c2 svg {
  vertical-align: middle;
}

.c1 {
  position: relative;
  max-width: 80rem;
  margin: 0 auto;
}

.c5 {
  list-style-type: none;
  padding: 0;
  margin: 0;
  position: relative;
}

.c8 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c8:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  border-bottom: 0.3125rem solid #FFFFFF;
}

.c8:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c11 {
  font-size: 0.9375rem;
  line-height: 1.25rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #FDFDFD;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  padding: 0.75rem 1rem;
}

.c11:hover::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c11:focus::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
  top: 0;
  border: 0.25rem solid #FFFFFF;
}

.c7 {
  display: inline-block;
  position: relative;
  z-index: 2;
}

.c9::after {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  border-bottom: 0.25rem solid #FFFFFF;
}

.c12 .c6::after {
  left: 0;
}

.c0 {
  position: relative;
  background-color: #B80000;
  border-top: 0.0625rem solid #FFFFFF;
}

.c0 .c6::after {
  left: 0;
}

@media (min-width:37.5rem) {
  .c2 {
    display: none;
    visibility: hidden;
  }
}

@media (min-width:20rem) {
  .c2 {
    height: 2.75rem;
    width: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    overflow: hidden;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c8 {
    padding: 0.75rem 0.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (max-width:24.9375rem) {
  .c11 {
    padding: 0.75rem 0.5rem;
  }
}

@media (max-width:37.4375rem) {
  .c7:last-child {
    margin-right: 3rem;
  }
}

@media (min-width:37.5rem) {
  .c7::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 80rem;
    border-bottom: 0.0625rem solid #eab3b3;
    z-index: -1;
  }
}

@media (max-width:37.4375rem) {
  .c4 {
    white-space: nowrap;
    overflow-x: scroll;
    -webkit-scroll-behavior: smooth;
    -moz-scroll-behavior: smooth;
    -ms-scroll-behavior: smooth;
    scroll-behavior: smooth;
    -webkit-overflow-scrolling: touch;
    -webkit-scrollbar-width: none;
    -moz-scrollbar-width: none;
    -ms-scrollbar-width: none;
    scrollbar-width: none;
    -ms-overflow-style: none;
  }

  .c4::-webkit-scrollbar {
    display: none;
  }

  .c4:after {
    content: ' ';
    height: 100%;
    width: 3rem;
    position: absolute;
    right: 0;
    bottom: 0;
    z-index: 3;
    overflow: hidden;
    pointer-events: none;
    background: linear-gradient( to right,rgba(184,0,0,0) 0%,rgba(184,0,0,1) 100% );
  }
}

<nav
  class="c0"
  dir="ltr"
  role="navigation"
>
  <div
    class="c1"
  >
    <button
      aria-expanded="false"
      aria-label="Sections"
      class="c2"
      dir="ltr"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="c3"
        focusable="false"
        height="2.75rem"
        viewBox="0 0 44 44"
        width="2.75rem"
      >
        <path
          d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z"
        />
      </svg>
    </button>
    <div
      class="c4"
      dir="ltr"
    >
      <ul
        class="c5"
        role="list"
      >
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c8"
            href="/news"
          >
            <span
              class="c9"
              role="text"
            >
              <span
                class="c10"
              >
                Current page
                , 
              </span>
              Home
            </span>
          </a>
        </li>
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c11"
            href="/news/uk"
          >
            UK
          </a>
        </li>
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c11"
            href="/news/world"
          >
            World
          </a>
        </li>
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c11"
            href="/news/business"
          >
            Business
          </a>
        </li>
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c11"
            href="/news/politics"
          >
            Politics
          </a>
        </li>
        <li
          class="c6 c7"
          dir="ltr"
          role="listitem"
        >
          <a
            class="c11"
            href="/news/technology"
          >
            Tech
          </a>
        </li>
      </ul>
    </div>
  </div>
</nav>
`;
